--- a/html/registration.html
+++ b/html/registration.html
@@ -46,7 +46,7 @@
     <div class="container h-100 mt-3">
         <h2>User Registration:</h2>
         <div class="row h-100 justify-content-center align-items-center">
-            <form class="col-12">
+            <form class="col-12" action="upload.php">
                 <div class="form-group">
                     <label for="text">Select Student/ Teacher:</label>
                     <select class="form-control" id="Select_S_T">
