--- a/html/login.html
+++ b/html/login.html
@@ -26,10 +26,10 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Login</a>
+                    <a class="nav-link" href="HTML/login.html">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Registration</a>
+                    <a class="nav-link" href="HTML/Registration.html">Registration</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Exam</a>
