--- a/html/registration.html
+++ b/html/registration.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
+    <script src="/js/function.js"></script>
 </head>
 
 <body>
@@ -26,19 +26,14 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Login</a>
+                    <a class="nav-link" href="login.html">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Registration</a>
+                    <a class="nav-link" href="registration.html">Registration</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Exam</a>
                 </li>
-                <div class="text-right">
-                    <li class="nav-item">
-                        <a class="nav-link d-none" href="#">System Management</a>
-                    </li>
-                </div>
             </ul>
         </div>
     </nav>
