--- a/html/login.html
+++ b/html/login.html
@@ -45,11 +45,11 @@
             <form class="col-12">
                 <div class="form-group">
                     <label for="text">User ID:</label>
-                    <input type="text" class="form-control " placeholder="Enter User ID" id="UserID">
+                    <input type="text" class="form-control " placeholder="Enter User ID" id="UserID" name="UserID">
                 </div>
                 <div class="form-group">
                     <label for="pwd">Password:</label>
-                    <input type="password" class="form-control" placeholder="Enter password" id="pwd">
+                    <input type="password" class="form-control" placeholder="Enter password" id="pwd" name="pwd">
                     <div class="form-group text-center">
                         <button type="submit" class="btn btn-primary mt-3">Submit</button>
                     </div>
@@ -59,7 +59,7 @@
     </div>
 
     <div class="jumbotron text-center">
-        <p>Back to top</p>
+        <p></p>
     </div>
 
 </body>
