--- a/html/login.html
+++ b/html/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>User Registration</title>
+    <title>User Login</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -42,7 +42,7 @@
     <div class="container h-100 mt-3">
         <h2>Please Login:</h2>
         <div class="row h-100 justify-content-center align-items-center">
-            <form class="col-12">
+            <form class="col-12" method="post" action="/EIE4432-Group-Project/php/login.php" id="form_content">
                 <div class="form-group">
                     <label for="text">User ID:</label>
                     <input type="text" class="form-control " placeholder="Enter User ID" id="UserID" name="UserID">
