--- a/html/registration.html
+++ b/html/registration.html
@@ -11,7 +11,7 @@
     <script src="/EIE4432-Group-Project/js/function.js"></script>
 </head>
 
-<body>
+<body onload="runApp()">
 
     <div class="jumbotron text-center" style="margin-bottom:0">
         <h1>Online examination system</h1>
