--- a/html/student.html
+++ b/html/student.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body onload="runApp()">
+<body>
 
     <div class="jumbotron text-center" style="margin-bottom:0">
         <h1>Online examination system</h1>
