--- a/html/login.html
+++ b/html/login.html
@@ -8,12 +8,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="/js/function.js"></script>
+    <script src="/EIE4432-Group-Project/js/function.js"></script>
+    <script src="/EIE4432-Group-Project/js/cookie.js"></script>
 
 </head>
 
-<body onload="runApp()">
-
+<body onload="runApp();">
     <div class="jumbotron text-center" style="margin-bottom:0">
         <h1>Online examination system</h1>
         <p id="welcomMsg">Welcome! </p>
