--- a/html/login.html
+++ b/html/login.html
@@ -47,6 +47,11 @@
                 <div class="form-group">
                     <label for="pwd">Password:</label>
                     <input type="password" class="form-control" placeholder="Enter password" id="pwd" name="pwd">
+                    <div class="form-check-inline">
+                        <label class="form-check-label">
+                          <input type="checkbox" class="form-check-input" value="rmbMe" id="rmbMe" name="rmbMe">Remember Me
+                        </label>
+                    </div>
                     <div class="form-group text-center">
                         <button type="submit" class="btn btn-primary mt-3">Submit</button>
                     </div>
