--- a/html/forgotPw.html
+++ b/html/forgotPw.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>User Login</title>
+    <title>Forgot Password</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -37,23 +37,22 @@
     </nav>
 
     <div class="container h-100 mt-3">
-        <h2>Please Login:</h2>
+        <h2>Please Enter your Email and User ID:</h2>
         <div class="row h-100 justify-content-center align-items-center">
-            <form class="col-12" method="post" action="/EIE4432-Group-Project/php/login.php" id="form_content">
+            <form class="col-12" method="post" action="/EIE4432-Group-Project/php/resetPw.php" id="form_content">
                 <div class="form-group">
-                    <label for="text">User ID:</label>
-                    <input type="text" class="form-control " placeholder="Enter User ID" id="UserID" name="UserID">
+                    <label for="text">Email:</label>
+                    <input type="text" class="form-control" placeholder="Enter email address" id="email" name="email">
                 </div>
                 <div class="form-group">
-                    <label for="pwd">Password:</label>
-                    <input type="password" class="form-control" placeholder="Enter password" id="pwd" name="pwd">
-                    <div class="form-check-inline">
-                        <label class="form-check-label">
-                          <input type="checkbox" class="form-check-input" value="rmbMe" id="rmbMe" name="rmbMe">Remember Me
-                        </label>
-                    </div>
+                    <label for="text">User ID:</label>
+                    <input type="text" class="form-control" placeholder="Enter your User ID" id="UserID" name="UserID">
+                </div>
+                <div class="form-group">
+                    <label for="pwd">New Password:</label>
+                    <input type="password" class="form-control" placeholder="Enter new password" id="pwd" name="pwd">
                     <div class="form-group text-center">
-                        <button type="submit" class="btn btn-primary mt-3">Submit</button><a class="btn btn-secondary mt-3 ml-3" href="forgotPw.html" role="button">Forgot password</a>
+                        <button type="submit" class="btn btn-primary mt-3">Submit</button>
                     </div>
                 </div>
             </form>
